--- a/views/index.html
+++ b/views/index.html
@@ -216,7 +216,7 @@ pre {
 
 <section class='container'>
           <hgroup>
-            <h1>This is awesome!! Node.js application on OpenShift</h1>
+            <h1>This is awesome!! update by sanjeev Node.js application on OpenShift</h1>
           </hgroup>
 
 
